--- a/web/index.html
+++ b/web/index.html
@@ -51,6 +51,13 @@
     </div>
     <!-- 右侧图标区 -->
     <div class="icon-columns">
+        <label> <div class="status-dot" data-status="可用"></div><label>可用</label> 
+         <div class="status-dot
+        " data-status="分档未测"></div><label>分档未测</label>
+         <div class="status-dot
+        " data-status="维修"></div><label>维修</label>
+         <div class="status-dot
+        " data-status="不存在"></div><label>不存在</label> </label>
         <div class="circle-column blue">
             <!-- 蓝色圆形图标 0-15 -->
         </div>
@@ -93,6 +100,7 @@
                     <option value="可用">可用</option>
                     <option value="分档未测">分档未测</option>
                     <option value="维修">维修</option>
+                    <option value="不存在">不存在</option>
                 </select>
             </div>
             <div class="form-group">
